# agentforge

./: .env.example  .gitignore  CLAUDE.md  README.md  agentforge.py  pyproject.toml  rough_plan.md  test_cli.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-intent-parsing-dynamic-manifest/: 01-PLAN-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-search-integration-compression/: 02-PLAN-SUMMARY.md
.planning/phases/03-generation-file-catalog/: 03-01-SUMMARY.md  03-PLAN.md  03-RESEARCH.md
.planning/phases/04-cli-integration-output-management/: 04-01-SUMMARY.md  04-PLAN.md  04-RESEARCH.md
.planning/phases/05-intent-parser-llm/: 05-PLAN.md
.planning/phases/06-search-api/: 06-PLAN.md
.planning/phases/07-generator-llm/: 07-PLAN.md
.planning/phases/08-fallback-chain/: 08-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
file_definitions/: catalog.py
src/: main.py
src/agentforge/catalog/: __init__.py  conditions.py  models.py  registry.py
src/agentforge/cli/: errors.py  exit_codes.py  logging_config.py
src/agentforge/generation/: __init__.py  fallback.py  generator.py
src/agentforge/generation/prompts/: agent_md.j2  api_md.j2  auth_md.j2  (+3 more)
src/agentforge/output/: writer.py
src/pipeline/: compressor.py  intent_parser.py  search.py
src/prompts/: compress.md
tests/: test_cli_flags.py  test_compression.py  test_intent_parser_schema.py  test_search.py
