[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "1.1.0"
description = "AI-powered CLI that generates dynamic config bundles for vibe coders"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Vivek Katariya", email = "vivek@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.1",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=0.2.0",
    "tavily>=1.1.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.12.5",
    "jinja2>=3.1.6",
    "rich>=14.3.3",
]

[project.scripts]
agentforge = "src.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
